# phone-bell

./: .gitignore  README.md
.github/workflows/: build.yml
CAD/: USB-C-Holder.ipt
CAD/OldVersions/: USB-C-Holder.0004.ipt
Electronics/: Electronics.kicad_pcb  Electronics.kicad_prl  Electronics.kicad_pro  Electronics.kicad_sch  fp-info-cache  fp-lib-table
Electronics/AdditionalComponents.pretty/: CYL104R-22UH.kicad_mod  HDGC TYPE C-HXS-131SMT.kicad_mod  Logo.kicad_mod  YIYUAN YTC-TC6-465.kicad_mod  YIYUAN YTC-TC6-560.kicad_mod  YPRH104R-220M.kicad_mod
Emulator/: components.json  package-lock.json  package.json
Emulator-CLI/: .env  package-lock.json  package.json
Emulator-CLI/src/: index.ts  test-local.ts  test-two-instances.ts
Emulator/src/app/: layout.tsx  page.tsx
Emulator/src/components/: server-provider.tsx  theme-provider.tsx
Software/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  asound.conf  build-rpi.sh  phone-bell.service  shell.nix
Software/assets/: dial_test.flac  door_open.flac  off_hook.flac
Software/src/: config.rs  hardware.rs  main.rs  ui.rs  web.rs
Software/src/hardware/: audio.rs  emulated.rs  mod.rs  physical.rs
Software/src/network/: iroh_voip.rs  mod.rs  rtc.rs  socket.rs
