[package]
name = "phone-bell-software"
version = "0.1.0"
edition = "2021"

[dependencies]
# emulated
druid = { version = "0.8.3", features = ["image", "png"], optional = true }

# real
rppal = { version = "0.17.1", features = ["hal"], optional = true }
debouncr = { version = "0.2.2", optional = true }

[features]
default = ["dep:druid"]
real = ["dep:rppal", "dep:debouncr"]
