[package]
name = "phone-bell-software"
version = "0.1.0"
edition = "2021"

[dependencies]
# common
uuid = { version = "1.11.0", features = ["serde"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
iroh = "0.96"
anyhow = "1.0"
serde = "1.0.210"
serde_json = "1.0.128"
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
cpal = "0.15.3"
audiopus = "0.3.0-rc.0"
reqwest = "0.12.8"
futures-util = "0.3"

# emulated
druid = { version = "0.8.3", features = ["image", "png"], optional = true }

# real
rppal = { version = "0.17.1", features = ["hal"], optional = true }
debouncr = { version = "0.2.2", optional = true }
force-send-sync = "1.1.0"
rodio = "0.19.0"

[features]
default = ["dep:druid"]
real = ["dep:rppal", "dep:debouncr"]
